@startuml
left to right direction
package main {

    package hook {

        abstract class YoutubeHook {
            # String con_id
            # String URL 
            
            # {abstract} criar_url(): String
            # executar_paginacao(url, session, params): String
            + conectar_api(url, params, session)
            + run()
        }

        class YoutubeBuscaAssuntoHook extends YoutubeHook {
            # String data_publicacao
            # String assunto_pesquisa
        }

        class YoutubeBuscaCanaisHook extends YoutubeHook {
            # IoperacaoDados operacao_arquivo_pkl 
        }

        class YoutubeVideoHook extends YoutubeHook {
            # IoperacaoDados carregar_canais_brasileiros
            # IoperacaoDados carregar_dados
        }

    }

    package operators {
        abstract class YoutubeOperator {
            # YoutubeHook operacao_hook
            # ArquivoJson arquivo_json
            # String assunto
            # ArquivoPicke arquivo_pkl_canal_video 
            # ArquivoPicke arquivo_pkl_canal
            # String task_id

            + {abstract} gravar_dados(req)
            + {abstract} execute(context)
        }

        class YoutubeVideoOperator extends YoutubeOperator {

        }
        class YoutubeBuscaCanaisOperator extends YoutubeOperator {

        }

        class YoutubeBuscaOperator extends YoutubeOperator {
            
        }
    }

    package src {
        package dados{
            interface IoperacaoDados<T> {
                + {abstract} salvar_dados(dados: T): void <<abstract>>
                + {abstract} carregar_dados(): T <<abstract>>
            }

            abstract class Arquivo implements IoperacaoDados {
                # String caminho_base
                # String pasta_datalake
                # String camada_datalake
                # String caminho_path_data
                # String assunto
                # String metrica
                # String nome_arquivo
                # String diretorio_completo

                + {abstract} salvar_dados(dados: T): void
                + {abstract} carregar_dados(): T
            }

            class ArquivoJson extends Arquivo {

            }

            class ArquivoPicke extends Arquivo {

            }
        }

 
        YoutubeBuscaCanaisHook --> "1" IoperacaoDados : usa
        YoutubeVideoHook  --> "1.." IoperacaoDados : usa

        YoutubeOperator  --> "1" YoutubeHook: usa

        YoutubeOperator --> "1..*"  IoperacaoDados : usa
    }
}
@enduml
